fix(result): specify container and word wrap

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,9 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 377px;
+  word-break: break-all;
+  overflow: auto;
 }
 
 .Button {
